<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.radlsuttonedmn.timesum.TimeSumActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="5dp"
        android:paddingStart="25dp"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize">

        <ImageButton
            android:id="@+id/buttonClearAll"
            android:scaleType="fitXY"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end"
            app:srcCompat="@drawable/ic_baseline_cancel_24px"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/clear_all"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/footer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/colorPrimary">

            <Button
                android:id="@+id/button_7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="42dp"
                android:layout_height="28dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorBlack"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:text="@string/seven"/>

            <Button
                android:id="@+id/button_8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="42dp"
                android:layout_height="28dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorBlack"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:text="@string/eight"/>

            <Button
                android:id="@+id/button_9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="42dp"
                android:layout_height="28dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorBlack"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:text="@string/nine"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/colorPrimary">

            <Button
                android:id="@+id/button_4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="42dp"
                android:layout_height="28dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorBlack"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:text="@string/four"/>

            <Button
                android:id="@+id/button_5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="42dp"
                android:layout_height="28dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorBlack"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:text="@string/five"/>

            <Button
                android:id="@+id/button_6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="42dp"
                android:layout_height="28dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorBlack"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:text="@string/six"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/colorPrimary">

            <Button
                android:id="@+id/button_1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="42dp"
                android:layout_height="28dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorBlack"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:text="@string/one"/>

            <Button
                android:id="@+id/button_2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="42dp"
                android:layout_height="28dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorBlack"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:text="@string/two"/>

            <Button
                android:id="@+id/button_3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="42dp"
                android:layout_height="28dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorBlack"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:text="@string/three"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/colorPrimary">

            <Button
                android:id="@+id/buttonClear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="42dp"
                android:layout_height="28dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorBlack"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:text="@string/clear"/>

            <Button
                android:id="@+id/button_0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="42dp"
                android:layout_height="28dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorBlack"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:text="@string/zero"/>

            <Button
                android:id="@+id/buttonEnter"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="42dp"
                android:layout_height="28dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorBlack"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:text="@string/next"/>

        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTimeEntries"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/app_toolbar"/>

</RelativeLayout>

